<resources>
    <string name="app_name">SoproniEvangelikus</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">LogOut</string>
    <string name="event_name_label">Event Name:</string>
    <string name="event_full_name_label">Event Full Name:</string>
    <string name="event_date_label">Event Date:</string>
    <string name="event_time_label">Event Time:</string>
    <string name="event_comments_label">Comments:</string>
    <string name="event_with_communion_label">With Communion</string>
    <string name="event_pastor_name_label">Pastor Name:</string>
    <string name="event_type_of_event_label">Event Type:</string>
    <string name="create_event_choose_date">Choose Date</string>
    <string name="create_event_choose_time">Choose Time</string>
    <string name="create_event_send_button">Create Event</string>
    <string name="create_event_location_label">Location:</string>
    <string name="pref_previously_started">FirstStart</string>


    <string-array name="locations">
        <item>Church</item>
        <item>Congregation House</item>
    </string-array>

    <string-array name="languages">
        <item>Hungarian</item>
        <item>German</item>
    </string-array>

    <string-array name="notificationTargets">
        <item>Family</item>
        <item>All</item>
    </string-array>

</resources>
